--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 changeEncourage(); 
                 break;
             case "e": 
-                alert("佳茵别EMO啦～抱抱你～一切都会好起来的～💖");
+                alert("佳茵姐姐别EMO啦～抱抱你～一切都会好起来的～💖");
                 break;
             default:
                 alert("先选择你的心情呀～选好再点确认哦～✨");
